syntax = "proto3";

package average;

service AverageService {
    // client streaming api example
    rpc Average (stream AverageRequest) returns (AverageResponse);
}

message AverageRequest {
    double number = 1;
}

message AverageResponse {
    double result = 1;
}