syntax = "proto3";

package greet;

service GreetService {
    // unary api
    rpc Greet (GreetRequest) returns (GreetResponse) {};

    // server streaming api
    rpc GreetManyTimes (GreetManyTimesRequest) returns ( stream GreetManyTimesResponse) {};

    // client streaming api
    rpc LongGreet (stream LongGreetRequest) returns (LongGreetResponse) {};

    // BI-directional streaming 
    rpc GreetEveryOne (stream GreetEveryOneRequest) returns (stream GreetEveryOneResponse);
}

message GreetEveryOneRequest {
    Greeting greeting = 1;
}

message GreetEveryOneResponse {
    string result = 1;
}

message LongGreetRequest {
    Greeting greeting = 1;
}

message LongGreetResponse {
    string result = 1;
}

message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message GreetManyTimesResponse {
    string result = 1;
}

message Greeting {
    string firstname = 1;
    string lastname = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}